# matrix-saml-strip-hostname

./: .gitignore  LICENSE  README.rst  pyproject.toml  shell.nix
matrix_saml_strip_hostname/: mapping_providers.py
