[tool.poetry]
name = "matrix-saml-strip-hostname"
version = "0.2.1"
description = "SAML mapping provider to strip hostnames from mxids"
authors = ["Sylvain Fankhauser <sephi@fhtagn.top>"]
repository = "https://github.com/sephii/matrix-saml-strip-hostname"
readme = "README.rst"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
