[project]
name = "matrix-saml-strip-hostname"
dynamic = ["version"]
description = "SAML mapping provider to strip hostnames from mxids"
authors = [{"name" = "Sylvain Fankhauser", "email" = "sephi@fhtagn.top"}]
repository = "https://github.com/sephii/matrix-saml-strip-hostname"
readme = "README.rst"
requires-python = ">=3.7"
license = "MIT"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["matrix_saml_strip_hostname"]
