[project]
name = "matrix-saml-strip-hostname"
dynamic = ["version"]
description = "SAML mapping provider to strip hostnames from mxids"
authors = [{"name" = "Sylvain Fankhauser", "email" = "sephi@fhtagn.top"}]
readme = "README.rst"
requires-python = ">=3.7"
license = {"file" = "LICENSE"}

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
